--- a/myweb01.html
+++ b/myweb01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="mystyle01.css">
     <title>MAXLUO</title>
 </head>
 <body>
