--- a/myweb02.html
+++ b/myweb02.html
@@ -7,21 +7,27 @@
 </head>
 <header>
     <div class="topnav">
-        <a href="#home" id="name">MAX LUO</a>
-        <a href="#GLASS" class="main" id="glassm">GLASS</a>
+        <a href="C:\Users\max\Documents\mywebsite\code\myweb02.html" id="name"><span>MAX LUO</span></a>
+        <a href="C:\Users\max\Documents\mywebsite\code\glass.html" class="main" id="glassm">GLASS</a>
         <a href="#sugar/cookies" class="main" id="sugarc">SUGAR/COOKIES</a>
         <a href="#mixed media" class="main" id="mixedmediam">MIXED MEDIA</a>
         <a href="#about" class="sub" id="about">about</a>
         <a href="#contact" class="sub" id="contact">contact</a>
-        <a href="https://www.instagram.com/" id="insta">
-            <img src="C:\Users\max\Documents\mywebsite\insta.png" alt="insta"></a>
+        <a target="_blank" href="https://www.instagram.com/" id="insta">
+            <img src="C:\Users\max\Documents\mywebsite\insta.png " alt="insta"></a>
       </div>
 </header>
 
 <body>
     <div class="images">
-    <img src="C:\Users\max\Documents\mywebsite\shootingstart11.jpg" alt="glass" id="glass">
+    <a href="C:\Users\max\Documents\mywebsite\code\glass.html">
+    <img src="C:\Users\max\Documents\mywebsite\glasshome.jpg" alt="glass" id="glass">
+    </a>
+    <a href="#sugar/cookies" >
     <img src="C:\Users\max\Documents\mywebsite\sugar01.jpg" alt="sugar" id="sugar">
-    <img src="C:\Users\max\Documents\mywebsite\mm02.jpg" alt="mm" id="mm">
+    </a>
+    <a href="#mixed media">
+    <img src="C:\Users\max\Documents\mywebsite\mmhome.jpg" alt="mm" id="mm">
+    </a>
     </div>
 </body>
