--- a/glass.html
+++ b/glass.html
@@ -2,44 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="mystyle02.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>MAXLUO02</title>
 </head>
+
+<body> 
 <header>
         <div class="topnav">
-            <a href="C:\Users\max\Documents\mywebsite\code\myweb02.html" id="name"><span>MAX LUO</span></a>
-            <a href="C:\Users\max\Documents\mywebsite\code\glass.html" class="main" id="glassm">GLASS</a>
+            <a href="index.html" id="name"><span>MAX LUO</span></a>
+            <a href="glass.html" class="main" id="glassm">GLASS</a>
             <a href="#sugar/cookies" class="main" id="sugarc">SUGAR/COOKIES</a>
             <a href="#mixed media" class="main" id="mixedmediam">MIXED MEDIA</a>
             <a href="#about" class="sub" id="about">about</a>
             <a href="#contact" class="sub" id="contact">contact</a>
-            <a target="_blank" href="https://www.instagram.com/" id="insta">
-                <img src="C:\Users\max\Documents\mywebsite\insta.png" alt="insta"></a>
+            <a target="_blank" href="https://www.instagram.com/whoknowsmax/" id="insta">
+                <img src="insta.png" alt="insta"></a>
           </div>
 </header>
 
-<body>
+ 
 <div class="flex-container">
       <div class="gallery">
-      <img src="C:\Users\max\Documents\mywebsite\glass\01.jpg" alt="glass01" class="test">
+      <img src="01.jpg" alt="glass01" class="test">
         <div class="desc"> 
          <h2> Title: Angery Bunny </h2>
          <h2>Materil: Glass</h2>
          <h2>Year: 2016</h2>
         </div>
        <div class="gallery">
-       <img src="C:\Users\max\Documents\mywebsite\glass\02.jpg" alt="glass02" class="test">
+       <img src="02.jpg" alt="glass02" class="test">
        <div class="desc"> 
         <h2> Title: Sad Room </h2>
         <h2>Materil: Glass</h2>
         <h2>Year: 2016</h2>
        </div>
-       <img src="C:\Users\max\Documents\mywebsite\glass\03.jpg" alt="glass03" class="test">
-       <img src="C:\Users\max\Documents\mywebsite\glass\04.jpg" alt="glass04" class="test">
-       <img src="C:\Users\max\Documents\mywebsite\glass\05.jpg" alt="glass05" class="test">
-       <img src="C:\Users\max\Documents\mywebsite\glass\06.jpg" alt="glass06" class="test">
-       <img src="C:\Users\max\Documents\mywebsite\glass\07.jpg" alt="glass07" class="test">
-       <img src="C:\Users\max\Documents\mywebsite\glass\08.jpg" alt="glass08" class="test">
+       <img src="03.jpg" alt="glass03" class="test">
+       <img src="04.jpg" alt="glass04" class="test">
+       <img src="05.jpg" alt="glass05" class="test">
+       <img src="06.jpg" alt="glass06" class="test">
+       <img src="07.jpg" alt="glass07" class="test">
+       <img src="08.jpg" alt="glass08" class="test">
  
     
 </div>
