--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="mystyle02.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>MAXLUO02</title>
 </head>
+<body> 
 <header>
     <div class="topnav">
-        <a href="C:\Users\max\Documents\mywebsite\code\myweb02.html" id="name"><span>MAX LUO</span></a>
-        <a href="C:\Users\max\Documents\mywebsite\code\glass.html" class="main" id="glassm">GLASS</a>
+        <a href="index.html" id="name"><span>MAX LUO</span></a>
+        <a href="glass.html" class="main" id="glassm">GLASS</a>
         <a href="#sugar/cookies" class="main" id="sugarc">SUGAR/COOKIES</a>
         <a href="#mixed media" class="main" id="mixedmediam">MIXED MEDIA</a>
         <a href="#about" class="sub" id="about">about</a>
         <a href="#contact" class="sub" id="contact">contact</a>
-        <a target="_blank" href="https://www.instagram.com/" id="insta">
-            <img src="C:\Users\max\Documents\mywebsite\insta.png " alt="insta"></a>
+        <a target="_blank" href="https://www.instagram.com/whoknowsmax/" id="insta">
+            <img src="insta.png" alt="insta"></a>
       </div>
 </header>
 
-<body>
     <div class="images">
     <a href="C:\Users\max\Documents\mywebsite\code\glass.html">
     <img src="C:\Users\max\Documents\mywebsite\glasshome.jpg" alt="glass" id="glass">
@@ -26,7 +26,7 @@
     <a href="#sugar/cookies" >
     <img src="C:\Users\max\Documents\mywebsite\sugar01.jpg" alt="sugar" id="sugar">
     </a>
-    <a href="#mixed media">
+    <a href="#mixedmedia">
     <img src="C:\Users\max\Documents\mywebsite\mmhome.jpg" alt="mm" id="mm">
     </a>
     </div>
