--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/index.css">
-    <title>MAXLUO02</title>
+    <title>MAXLUO</title>
 </head>
 <body> 
 <header>
@@ -20,14 +20,14 @@
 </header>
 
     <div class="images">
-    <a href="C:\Users\max\Documents\mywebsite\code\glass.html">
-    <img src="C:\Users\max\Documents\mywebsite\glasshome.jpg" alt="glass" id="glass">
+    <a href="glass.html">
+    <img src="glasshome.jpg" alt="glass" id="glass">
     </a>
     <a href="#sugar/cookies" >
-    <img src="C:\Users\max\Documents\mywebsite\sugar01.jpg" alt="sugar" id="sugar">
+    <img src="sugar01.jpg" alt="sugar" id="sugar">
     </a>
     <a href="#mixedmedia">
-    <img src="C:\Users\max\Documents\mywebsite\mmhome.jpg" alt="mm" id="mm">
+    <img src="mmhome.jpg" alt="mm" id="mm">
     </a>
     </div>
 </body>
